--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,10 @@ body {
 
 .container { 
     display: flex;
-    flex-wrap: wrap;
     width: 500px;
     height: 500px;
+}
+
+h3 { 
+    text-align: center;
 }
