--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,13 @@ body {
 
 .container { 
     display: flex;
+    flex-wrap: wrap;
     width: 500px;
     height: 500px;
+}
+
+.cell { 
+    box-sizing: border-box;
 }
 
 h3 { 
