--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,14 @@ body {
     display: flex; 
     flex-direction: column;
     align-items: center;
+    height: 100vh;
 }
 
 .container { 
     display: flex;
     flex-wrap: wrap;
-    width: 500px;
-    height: 500px;
+    width: 900px;
+    height: 900px;
     background-color: beige;
 }
 
